# ctcl-app

./: .gitignore  Cargo.toml  LICENSE  Open-CTCL-Preview.bat  README.md
ctcl-cli/: Cargo.toml
ctcl-cli/src/: commands.rs  index.html  main.rs  server.rs
ctcl-core/: Cargo.toml
ctcl-core/src/: encoding.rs  error.rs  instant.rs  lib.rs  system.rs  timescale.rs
ctcl-desktop/: Cargo.toml  tauri.conf.json
ctcl-desktop/src/: device_observer.rs  local_api.rs  main.rs  trigger_engine.rs  wake_delivery.rs
ctcl-desktop/ui/: index.html
ctcl-mcp/: Cargo.toml
ctcl-mcp/src/: main.rs  server.rs
ctcl-mcp/tests/: mcp_protocol.rs
ctcl-store/: Cargo.toml
ctcl-store/src/: agent_endpoint.rs  audit.rs  decision_receipt.rs  device_observer.rs  error.rs  group.rs  instant.rs  lib.rs  settings.rs  system.rs  trigger.rs  wake_event.rs
