[package]
name = "ctcl-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Local MCP server (stdio transport) exposing CTCL's local capabilities as tools for an external Agent Runtime - whitepaper CTCL_Agent_Wake_MCP_Temporal_Runtime Phase 4.5C."

[[bin]]
name = "ctcl-mcp"
path = "src/main.rs"

[dependencies]
ctcl-core = { path = "../ctcl-core" }
ctcl-store = { path = "../ctcl-store" }
rmcp = { version = "2", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rmcp = { version = "2", features = ["client", "transport-child-process"] }
